Update Rejected-Activate Comments
